[gd_scene load_steps=2 format=3 uid="uid://l4fjnpmhnxma"]

[ext_resource type="Script" path="res://playground/scripts/menu.gd" id="1_f3vx7"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_f3vx7")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="GridContainer" type="GridContainer" parent="PanelContainer"]
layout_mode = 2
columns = 2

[node name="Server" type="Button" parent="PanelContainer/GridContainer"]
layout_mode = 2
text = "Server"

[node name="Client" type="Button" parent="PanelContainer/GridContainer"]
layout_mode = 2
text = "Client"

[node name="StartButton" type="Button" parent="PanelContainer"]
visible = false
layout_mode = 2
text = "START MATCH"

[connection signal="pressed" from="PanelContainer/GridContainer/Server" to="." method="_on_server_pressed"]
[connection signal="pressed" from="PanelContainer/GridContainer/Client" to="." method="_on_client_pressed"]
[connection signal="pressed" from="PanelContainer/StartButton" to="." method="_on_start_button_pressed"]
